--- a/src/main/res/layout/activity_show.xml
+++ b/src/main/res/layout/activity_show.xml
@@ -19,12 +19,50 @@
         android:layout_height="1dp"
         android:background="@drawable/divider_blue" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/et_number_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="17602142076"
+            android:hint="number" />
+
+        <Button
+            android:id="@+id/btn_call"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="call" />
+
+        <Button
+            android:id="@+id/btn_accept"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="accept" />
+
+        <Button
+            android:id="@+id/btn_refuse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="refuse" />
+
+        <Button
+            android:id="@+id/btn_terminal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="terminal" />
+
+
+    </LinearLayout>
+
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@drawable/divider_gray" />
-
 
 
 </LinearLayout>
