--- a/src/main/res/layout/activity_show.xml
+++ b/src/main/res/layout/activity_show.xml
@@ -30,12 +30,30 @@
             android:layout_height="wrap_content"
             android:text="17602142076"
             android:hint="number" />
+        <EditText
+            android:id="@+id/et_number_text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1"
+            android:hint="number2" />
+
+        <Button
+            android:id="@+id/btn_audio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="audio" />
 
         <Button
             android:id="@+id/btn_call"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="call" />
+
+        <Button
+            android:id="@+id/btn_sendtmf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="sendDTMF" />
 
         <Button
             android:id="@+id/btn_accept"
